--- a/ProjectAsteroid_Data/boot.config
+++ b/ProjectAsteroid_Data/boot.config
@@ -1,3 +1,8 @@
+player-connection-mode=Listen
+player-connection-guid=3614147795
+player-connection-debug=0
+player-connection-project-name=ProjectAsteroid
+player-connection-ip=192.168.8.101
 gfx-enable-gfx-jobs=
 gfx-enable-native-gfx-jobs=
 wait-for-native-debugger=0
